# tilemaker

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  Dockerfile  Doxyfile  INSTALL.md  LICENCE.txt  Makefile  README.md  Vagrantfile  action.yml  config.json  get-coastline.sh  get-landcover.sh  get-monaco.sh  process.lua
.github/scripts/: verify-generated-tiles.py
.github/workflows/: ci.yml  publish.yml
cmake/: CheckCxxAtomic.cmake  FindLuaJIT.cmake  FindRapidjson.cmake  FindSQLite3.cmake  Findlibshp.cmake  config_schema.h.in
docs/: CONFIGURATION.md  INSTALL.md  RELATIONS.md  RUNNING.md  VECTOR_TILES.md
docs/man/: tilemaker.1
include/: README_sqlite_cpp.md  append_vector.h  attribute_store.h  clip_cache.h  config_validator.h  coordinates.h  coordinates_geom.h  deque_map.h  geojson.h  geojson_processor.h  geojson_writer.h  geom.h  geometry_cache.h  geomtypes.h  helpers.h  kaguya.hpp  leased_store.h  mbtiles.h  mmap_allocator.h  node_store.h  node_stores.h  options_parser.h  osm_disk_tiles.h  osm_lua_processing.h  osm_mem_tiles.h  osm_object.h  osm_store.h  osmformat.proto  output_object.h  pbf_blocks.h  pbf_processor.h  pbf_reader.h  pmtiles.h  polylabel.h  pooled_string.h  read_pbf.h  read_shp.h  relation_roles.h  sharded_node_store.h  sharded_way_store.h  (+18 more)
include/dissolve/: dissolve.hpp
include/geometry/: correct.hpp
include/sqlite_modern_cpp/utility/: function_traits.h
include/tsl/: sparse_growth_policy.h  sparse_hash.h  sparse_map.h  sparse_set.h
include/vtzero/: builder.hpp  geometry.hpp  property_value.hpp  types.hpp
resources/: config-coastline.json  config-debug.json  config-example.json  config-openmaptiles.json  config-otm.json  config-schema.json  config-testdata.json  docker-entrypoint.sh  mbtileserver.rb  mbx_compatible_config.json  mbx_compatible_process.lua  process-coastline.lua  process-debug.lua  process-example.lua  process-openmaptiles.lua  process-otm.lua
server/: server.cpp  server.rb
server/Simple-Web-Server/: LICENSE  asio_compatibility.hpp  mutex.hpp  server_http.hpp  status_code.hpp  utility.hpp
server/static/: index.html  spec.json  style.json
server/static/fonts/: .gitignore  README.md
server/static/fonts/KlokanTech Noto Sans Bold/: 0-255.pbf  1024-1279.pbf  10240-10495.pbf  10496-10751.pbf  10752-11007.pbf  11008-11263.pbf  11264-11519.pbf  11520-11775.pbf  11776-12031.pbf  12032-12287.pbf  12288-12543.pbf  12544-12799.pbf  1280-1535.pbf  12800-13055.pbf  13056-13311.pbf  13312-13567.pbf  13568-13823.pbf  13824-14079.pbf  14080-14335.pbf  14336-14591.pbf  14592-14847.pbf  14848-15103.pbf  15104-15359.pbf  1536-1791.pbf  15360-15615.pbf  15616-15871.pbf  15872-16127.pbf  16128-16383.pbf  16384-16639.pbf  16640-16895.pbf  16896-17151.pbf  17152-17407.pbf  17408-17663.pbf  17664-17919.pbf  1792-2047.pbf  17920-18175.pbf  18176-18431.pbf  18432-18687.pbf  18688-18943.pbf  18944-19199.pbf  (+216 more)
server/static/fonts/KlokanTech Noto Sans CJK Bold/: 0-255.pbf  1024-1279.pbf  10240-10495.pbf  10496-10751.pbf  10752-11007.pbf  11008-11263.pbf  11264-11519.pbf  11520-11775.pbf  11776-12031.pbf  12032-12287.pbf  12288-12543.pbf  12544-12799.pbf  1280-1535.pbf  12800-13055.pbf  13056-13311.pbf  13312-13567.pbf  13568-13823.pbf  13824-14079.pbf  14080-14335.pbf  14336-14591.pbf  14592-14847.pbf  14848-15103.pbf  15104-15359.pbf  1536-1791.pbf  15360-15615.pbf  15616-15871.pbf  15872-16127.pbf  16128-16383.pbf  16384-16639.pbf  16640-16895.pbf  16896-17151.pbf  17152-17407.pbf  17408-17663.pbf  17664-17919.pbf  1792-2047.pbf  17920-18175.pbf  18176-18431.pbf  18432-18687.pbf  18688-18943.pbf  18944-19199.pbf  (+216 more)
server/static/fonts/KlokanTech Noto Sans CJK Regular/: 0-255.pbf  1024-1279.pbf  10240-10495.pbf  10496-10751.pbf  10752-11007.pbf  11008-11263.pbf  11264-11519.pbf  11520-11775.pbf  11776-12031.pbf  12032-12287.pbf  12288-12543.pbf  12544-12799.pbf  1280-1535.pbf  12800-13055.pbf  13056-13311.pbf  13312-13567.pbf  13568-13823.pbf  13824-14079.pbf  14080-14335.pbf  14336-14591.pbf  14592-14847.pbf  14848-15103.pbf  15104-15359.pbf  1536-1791.pbf  15360-15615.pbf  15616-15871.pbf  15872-16127.pbf  16128-16383.pbf  16384-16639.pbf  16640-16895.pbf  16896-17151.pbf  17152-17407.pbf  17408-17663.pbf  17664-17919.pbf  1792-2047.pbf  17920-18175.pbf  18176-18431.pbf  18432-18687.pbf  18688-18943.pbf  18944-19199.pbf  (+216 more)
server/static/fonts/KlokanTech Noto Sans Italic/: 0-255.pbf  1024-1279.pbf  10240-10495.pbf  10496-10751.pbf  10752-11007.pbf  11008-11263.pbf  11264-11519.pbf  11520-11775.pbf  11776-12031.pbf  12032-12287.pbf  (+246 more)
src/: attribute_store.cpp  clip_cache.cpp  config_validator.cpp  coordinates.cpp  coordinates_geom.cpp  geojson_processor.cpp  geom.cpp  helpers.cpp  mbtiles.cpp  mmap_allocator.cpp  node_stores.cpp  options_parser.cpp  osm_disk_tiles.cpp  osm_lua_processing.cpp  osm_mem_tiles.cpp  osm_object.cpp  osm_store.cpp  output_object.cpp  pbf_blocks.cpp  pbf_processor.cpp  pbf_reader.cpp  pmtiles.cpp  pooled_string.cpp  read_pbf.cpp  read_shp.cpp  relation_roles.cpp  sharded_node_store.cpp  sharded_way_store.cpp  shared_data.cpp  shp_mem_tiles.cpp  shp_processor.cpp  significant_tags.cpp  simplify_buildings.cpp  sorted_node_store.cpp  sorted_way_store.cpp  sorted_way_store.test.cpp  tag_map.cpp  tile_coordinates_set.cpp  tile_data.cpp  tile_sorting.cpp  (+5 more)
test/: CMakeLists.txt  append_vector.test.cpp  attribute_store.test.cpp  coastline.rb  config_validator.test.cpp  deque_map.test.cpp  helpers.test.cpp  monaco.pbf  options_parser.test.cpp  osm_store.test.cpp  pbf_reader.test.cpp  pooled_string.test.cpp  relation_roles.test.cpp  significant_tags.test.cpp  sorted_node_store.test.cpp  sorted_way_store.test.cpp  test.jsonl  test_helpers.cpp  tile_coordinates_set.test.cpp
testdata/: iow_os_opendata.pbf
testdata/shp/: Building4326.dbf  Building4326.shx  ElectricityTransmissionLine4326.dbf  ElectricityTransmissionLine4326.shp  ElectricityTransmissionLine4326.shx  TidalWater4326.dbf  TidalWater4326.shp  TidalWater4326.shx  Woodland4326.dbf  Woodland4326.shp  Woodland4326.shx  readme.txt
(+256 files in other folders)
